@@ -54,6 +54,7 @@ wincaps wincap_2000 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_console_logon_sid:false,
   wow64_has_secondary_stack:false,
   has_program_compatibility_assitant:false,
+  kernel_is_always_casesensitive:true,
 };
 
 wincaps wincap_2000sp4 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -87,6 +88,7 @@ wincaps wincap_2000sp4 __attribute__((section (".cygwin_dll_common"), shared)) =
   has_console_logon_sid:false,
   wow64_has_secondary_stack:false,
   has_program_compatibility_assitant:false,
+  kernel_is_always_casesensitive:true,
 };
 
 wincaps wincap_xp __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -120,6 +122,7 @@ wincaps wincap_xp __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_console_logon_sid:false,
   wow64_has_secondary_stack:false,
   has_program_compatibility_assitant:false,
+  kernel_is_always_casesensitive:false,
 };
 
 wincaps wincap_xpsp1 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -153,6 +156,7 @@ wincaps wincap_xpsp1 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_console_logon_sid:false,
   wow64_has_secondary_stack:false,
   has_program_compatibility_assitant:false,
+  kernel_is_always_casesensitive:false,
 };
 
 wincaps wincap_xpsp2 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -186,6 +190,7 @@ wincaps wincap_xpsp2 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_console_logon_sid:false,
   wow64_has_secondary_stack:false,
   has_program_compatibility_assitant:false,
+  kernel_is_always_casesensitive:false,
 };
 
 wincaps wincap_2003 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -219,6 +224,7 @@ wincaps wincap_2003 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_console_logon_sid:false,
   wow64_has_secondary_stack:true,
   has_program_compatibility_assitant:false,
+  kernel_is_always_casesensitive:false,
 };
 
 wincaps wincap_vista __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -252,6 +258,7 @@ wincaps wincap_vista __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_console_logon_sid:false,
   wow64_has_secondary_stack:false,
   has_program_compatibility_assitant:true,
+  kernel_is_always_casesensitive:false,
 };
 
 wincaps wincap_7 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -285,6 +292,7 @@ wincaps wincap_7 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_console_logon_sid:true,
   wow64_has_secondary_stack:false,
   has_program_compatibility_assitant:true,
+  kernel_is_always_casesensitive:false,
 };
 
 wincapc wincap __attribute__((section (".cygwin_dll_common"), shared));
