@@ -44,6 +44,7 @@ struct wincaps
   unsigned has_console_logon_sid			: 1;
   unsigned wow64_has_secondary_stack			: 1;
   unsigned has_program_compatibility_assitant		: 1;
+  unsigned kernel_is_always_casesensitive		: 1;
 };
 
 class wincapc
@@ -96,6 +97,7 @@ public:
   bool	IMPLEMENT (has_console_logon_sid)
   bool	IMPLEMENT (wow64_has_secondary_stack)
   bool	IMPLEMENT (has_program_compatibility_assitant)
+  bool	IMPLEMENT (kernel_is_always_casesensitive)
 
 #undef IMPLEMENT
 };
